- Création classe Utilisateur - Création UtilisateurViewModel - Création GestionUtilisateursView

--- a/AirAtlantique_Csharp/AirAtlantique_Csharp.csproj
+++ b/AirAtlantique_Csharp/AirAtlantique_Csharp.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Views\GestionClientsView.xaml.cs">
       <DependentUpon>GestionClientsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\GestionUtilisateursView.xaml.cs">
+      <DependentUpon>GestionUtilisateursView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -145,6 +148,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\GestionClientsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GestionUtilisateursView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
