- Suppression des fichiers "Client" remplacés par "Utilisateur". - Modification de la chaine de production.

--- a/AirAtlantique_Csharp/App.config
+++ b/AirAtlantique_Csharp/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="localhost" connectionString="SERVER=localhost; DATABASE=airatlantiquebdd; PORT=3306; UID=airatlantiqueadmin; PASSWORD=Epsi2019!"/>
+    <add name="BDDCampus" connectionString="SERVER=172.16.2.2; DATABASE=w_montagne; PORT=3306; UID=w_montagne; PASSWORD=Epsi2019!"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
