--- a/AirAtlantique_Csharp/AirAtlantique_Csharp.csproj
+++ b/AirAtlantique_Csharp/AirAtlantique_Csharp.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector Net 8.0.13\Assemblies\v4.5.2\MySql.Web.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -67,15 +68,12 @@
     <Compile Include="Command\RelayCommand.cs" />
     <Compile Include="Models\Aeroport.cs" />
     <Compile Include="Models\Avion.cs" />
-    <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Utilisateur.cs" />
     <Compile Include="Models\Vol.cs" />
     <Compile Include="ViewModels\AeroportViewModel.cs" />
     <Compile Include="ViewModels\AvionViewModel.cs" />
-    <Compile Include="ViewModels\ClientViewModel.cs" />
     <Compile Include="ViewModels\Queries\AeroportDAL.cs" />
     <Compile Include="ViewModels\Queries\AvionDAL.cs" />
-    <Compile Include="ViewModels\Queries\ClientDAL.cs" />
     <Compile Include="test.xaml.cs">
       <DependentUpon>test.xaml</DependentUpon>
     </Compile>
@@ -101,11 +99,11 @@
     <Compile Include="Views\GestionAvionsView.xaml.cs">
       <DependentUpon>GestionAvionsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\GestionClientsView.xaml.cs">
-      <DependentUpon>GestionClientsView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\GestionUtilisateursView.xaml.cs">
       <DependentUpon>GestionUtilisateursView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GestionVolsView.xaml.cs">
+      <DependentUpon>GestionVolsView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -147,11 +145,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GestionClientsView.xaml">
+    <Page Include="Views\GestionUtilisateursView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GestionUtilisateursView.xaml">
+    <Page Include="Views\GestionVolsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
